JfrCheckpointManager failed "assert(!SafepointSynchronize::is_at_safepoint()) failed: invariant"

XMLWordPrintable

    • jfr
    • b28
    • x86_64
    • windows
    • Verified

        The following test failed in the JDK16 CI:

        applications/dacapo/Dacapo24H.java

        Here's the failing thread's stack trace:

        --------------- T H R E A D ---------------

        Current thread (0x000002197ed5afc0): JavaThread "JFR Recorder Thread" daemon [_thread_in_native, id=3224, stack(0x00000097b8200000,0x00000097b8300000)]

        Stack: [0x00000097b8200000,0x00000097b8300000]
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [jvm.dll+0xa46f31] os::platform_print_native_stack+0xf1 (os_windows_x86.cpp:369)
        V [jvm.dll+0xc5e056] VMError::report+0xf86 (vmError.cpp:732)
        V [jvm.dll+0xc5f8be] VMError::report_and_die+0x7ee (vmError.cpp:1548)
        V [jvm.dll+0xc5ff74] VMError::report_and_die+0x64 (vmError.cpp:1341)
        V [jvm.dll+0x4368a7] report_vm_error+0x117 (debug.cpp:264)
        V [jvm.dll+0x62d5a6] JfrCheckpointManager::clear+0x46 (jfrCheckpointManager.cpp:345)
        V [jvm.dll+0x664608] JfrRecorderService::start+0x178 (jfrRecorderService.cpp:429)
        V [jvm.dll+0x6651b3] recorderthread_entry+0x223 (jfrRecorderThreadLoop.cpp:78)
        V [jvm.dll+0xbfd274] JavaThread::run+0x244 (thread.cpp:1946)
        V [jvm.dll+0xbf36c4] Thread::call_run+0x1b4 (thread.cpp:398)
        V [jvm.dll+0xa4559e] thread_native_entry+0x10e (os_windows.cpp:466)
        C [ucrtbase.dll+0x1f4a0]
        C [KERNEL32.DLL+0x84d4]
        C [ntdll.dll+0x6e8b1]

              Assignee:
              Markus Grönlund
              Reporter:
              Daniel Daugherty
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: